# analis_models

./: .gitignore  pyproject.toml  requirements.txt
app/: .env
app/alembic/: env.py
app/alembic/versions/: 2aa85f3b0882_add_all_models.py
app/src/core/: base.py  config.py
app/src/model/: __init__.py  customer.py  lab.py  order.py  user.py  user_lab.py
