[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analis-models"
version = "0.1.0"

dependencies = [
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "greenlet==3.2.2",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.0",
    "SQLAlchemy==2.0.41",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2"
]

[tool.setuptools.packages.find]
where = ["app"]